a little code cleanup